erDiagram
    profile {
        uuid id PK
        text description
        text username
        text password_hash
        timestampz created_at
        text image_path
        text secret
    }
    note {
        uuid id PK
        text note_data
        timestampz created_at
        timestampz updated_at
        uuid owner_id FK
    }
    attach {
        uuid id PK
        text file_path
        uuid note_id FK
    }
    profile ||--o{ note : "1:M"
    note ||--o{ attach : "1:M"